--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div  class=" pb-2">
         <div class="bg-blue text-white text-center py-2 ">
-            <h1>Batery Finder Program</h1>
+            <h1>Battery Finder Program</h1>
         </div>
     
         <div class="pl-3 pt-3">
